@@ -29,6 +29,7 @@ import javax.ws.rs.POST;
 import javax.ws.rs.Path;
 import javax.ws.rs.PathParam;
 import javax.ws.rs.Produces;
+import javax.ws.rs.QueryParam;
 import javax.ws.rs.client.Client;
 import javax.ws.rs.client.ClientBuilder;
 import javax.ws.rs.client.Entity;
@@ -392,7 +393,7 @@ public class CeeposRESTService {
   /**
    * REQUEST:
    * 
-   * mApi().ceepos.products.read();
+   * mApi().ceepos.products.read({line: 'nettilukio'});
    * 
    * RESPONSE:
    * 
@@ -413,8 +414,8 @@ public class CeeposRESTService {
   @Path("/products")
   @GET
   @RESTPermit(CeeposPermissions.LIST_PRODUCTS)
-  public Response listProducts() {
-    List<CeeposProduct> products = ceeposController.listProducts();
+  public Response listProducts(@QueryParam("line") String line) {
+    List<CeeposProduct> products = ceeposController.listProducts(line);
     List<CeeposProductRestModel> restProducts = new ArrayList<>();
     for (CeeposProduct product : products) {
       restProducts.add(new CeeposProductRestModel(
@@ -810,7 +811,7 @@ public class CeeposRESTService {
     
     // Ensure our order exists (archived is semi-fine since this is a programmatic call)
     
-    CeeposOrder order = ceeposController.findOrderById(new Long(paymentConfirmation.getId()));
+    CeeposOrder order = ceeposController.findOrderById(Long.valueOf(paymentConfirmation.getId()));
     if (order == null) {
       logger.severe(String.format("Ceepos order %s: Not found", paymentConfirmation.getId()));
       return Response.status(Status.BAD_REQUEST).entity("Source system order not found").build();
